--- a/resources/public/css/styles.css
+++ b/resources/public/css/styles.css
@@ -2,53 +2,56 @@
   box-sizing: border-box; }
 
 body {
-  background: #336;
   font-family: "Source Sans Pro"; }
 
 .container {
   max-width: 800px;
   margin: auto;
   margin-top: 40px;
-  background: #f9f9f9;
-  padding: 20px;
-  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.6); }
+  padding: 20px; }
 
-.main-header {
-  padding: 10px;
-  text-align: center; }
-  .main-header h1 {
-    margin: 0;
-    paddin: 0;
-    font-weight: normal;
-    text-decoration: none;
-    font-family: "Francois One",sans-serif; }
+.main-header h1 {
+  margin: 0;
+  paddin: 0;
+  font-weight: normal;
+  text-decoration: none;
+  border-bottom: 2px solid black; }
 
 .primary-container .primary-header {
-  text-align: center;
-  font-weight: normal;
-  font-family: "Francois One",sans-serif; }
+  font-weight: normal; }
 
 .project-sum-container {
-  margin: 10px;
   padding: 0 px;
-  border: 1px solid #eee;
-  height: 100px;
-  list-style: none; }
-  .project-sum-container .project-sum-header {
-    display: inline-block;
-    padding: 8px;
-    width: 79%;
-    height: 100%; }
-    .project-sum-container .project-sum-header h3 {
-      padding: 0;
-      margin: 0; }
-  .project-sum-container .project-sum-details {
-    display: inline-block;
-    padding: 8px;
-    width: 20%;
-    height: 100%;
-    text-align: right; }
-    .project-sum-container .project-sum-details p {
-      padding: 0;
-      margin: 0;
-      font-size: 12px; }
+  list-style: none;
+  margin-bottom: 16px; }
+  .project-sum-container .project-sum-header h3 {
+    font-weight: normal;
+    font-size: 32px;
+    padding: 0;
+    margin: 0; }
+  .project-sum-container .project-sum-details p {
+    padding: 0;
+    margin: 0;
+    font-size: 12px;
+    color: #666;
+    text-transform: uppercase; }
+  .project-sum-container .project-sum-details .project-sum-delete {
+    float: right; }
+
+.project-edit-field {
+  width: 100%;
+  font-size: 32px;
+  border: none;
+  border-bottom: 2px dashed black;
+  padding-bottom: 5px; }
+  .project-edit-field:focus {
+    outline: none; }
+  .project-edit-field::-webkit-input-placeholder {
+    font-style: italic; }
+  .project-edit-field::-moz-placeholder {
+    font-style: italic; }
+  .project-edit-field:-ms-input-placeholder {
+    font-style: italic; }
+
+.project-new-field {
+  margin-bottom: 16px; }
