--- a/resources/sass/styles.scss
+++ b/resources/sass/styles.scss
@@ -3,7 +3,6 @@
 }
 
 body {
-    background: #336;
     font-family: "Source Sans Pro";
 }
 
@@ -11,9 +10,7 @@ body {
     max-width:800px;
     margin:auto;
     margin-top:40px;
-    background:#f9f9f9;
     padding:20px;
-    box-shadow: 2px 2px 2px rgba(0,0,0,0.6);
 }
 
 .main-header {
@@ -22,46 +19,64 @@ body {
         paddin:0;
         font-weight:normal;
         text-decoration:none;
-        font-family:"Francois One",sans-serif;
+        border-bottom: 2px solid black;
     }
-    padding:10px;
-    text-align:center;
 }
 
 .primary-container{
     & .primary-header {
-        text-align:center;
         font-weight: normal;
-        font-family:"Francois One",sans-serif;
     }
 }
 
 .project-sum-container {
-    margin:10px;
     padding:0 px;
-    border: 1px solid #eee;
-    height:100px;
     list-style: none;
+    margin-bottom:16px;
     .project-sum-header{
-        display:inline-block;
-        padding:8px;
-        width:79%;
-        height:100%;
         h3{
+            font-weight:normal;
+            font-size: 32px;
             padding:0;
             margin:0;
         }
     }
     .project-sum-details{
-        display:inline-block;
-        padding: 8px;
-        width:20%;
-        height:100%;
-        text-align:right;
         p{
             padding:0;
             margin:0;
             font-size: 12px;
+            color: #666;
+            text-transform: uppercase;
+        }
+        .project-sum-delete{
+            float:right;
         }
     }
+}
+
+.project-edit-field {
+    width:100%;
+    font-size: 32px;
+    border:none;
+    border-bottom: 2px dashed black;
+    padding-bottom:5px;
+    &:focus {
+        outline:none;
+    }
+    &::-webkit-input-placeholder{
+        font-style: italic;
+    }
+    &::-moz-placeholder{
+        font-style: italic;
+    }
+    &:-ms-input-placeholder{
+
+        font-style: italic;
+    }
+    
+}
+.project-new-field {
+    margin-bottom: 16px;
+    
 }
