--- a/resources/sass/styles.scss
+++ b/resources/sass/styles.scss
@@ -39,6 +39,14 @@ body {
             font-size: 32px;
             padding:0;
             margin:0;
+            display: inline-block;
+        }
+        .arrow-button{
+            color:#000;
+            text-decoration:none;
+            font-size:32px;
+            display:inline-block;
+            float:right;
         }
     }
     .project-sum-details{
